--- a/docs/css/modules/perks-flaws.scss
+++ b/docs/css/modules/perks-flaws.scss
@@ -85,6 +85,9 @@
       margin: 0;
       margin-top: -6rem;
 
+      z-index: 0;
+      position: relative;
+
       + p {
         margin: 0 !important;
         margin-left: 120px !important;
